--- a/app.json
+++ b/app.json
@@ -17,6 +17,11 @@
       "value": "",
       "required": true
     },
+    "DEXCOM_SERVER": {
+      "description": "Dexcom Share server site.",
+      "value": "",
+      "required": false
+    },
     "WEBSITE_HOSTNAME": {
       "description": "The host name for your Nightscout website.  Example: sitename.herokuapp.com or sitename.azurewebsites.net.  Do not include http:// or https://",
       "value": "",
